2019-07-19  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	Let --posix turn off nonportable scripts ending in backslash.
	* sed/compile.c (errors, INCOMPLETE_CMD): New error string.
	(compile_program): In strict posix mode, complain about incomplete
	command.
	* NEWS: Update.
	Report by Bruno Haible.

2011-11-23  Paolo Bonzini  <bonzini@gnu.org>

	* doc/sed-in.texi: Document how multiline mode affects matching
	newlines against period.  Reported by Dmitry Bolshakov.

2011-08-29  Paolo Bonzini  <bonzini@gnu.org>

	* sed/sed.c (usage): Fix documentation for -i.  Reported by
	Dennis Bartlett.

2011-07-11  Jim Meyering  <meyering@redhat.com>

	avoid silent data loss when an input line is 2^31 bytes or longer
	If one line in a file has length (including newline) of 2^31, then
	applying sed -i to that file truncates it to size 0.  I first
	noticed it like this: Create a file with line of length 2^31-1
	  $ perl -le 'print "v"x(2**31-1)' > k
	Then prepend a byte to that line:
	  $ sed -i 's/^/v/' k
	Surprise!  The file is empty.
	* sed/utils.c (ck_getline): Declare "result" to be of type ssize_t,
	rather than int, to match the return type of getline.

2011-07-14  Padraig Brady  <p@draigbrady.com>

	* execute.c (open_next_file): Only reopen stdin on Windows/DOS.

2011-05-27  Paolo Bonzini  <bonzini@gnu.org>

	* doc/sed-in.texi: Explain behavior of \l and \u at the end
	of the replacement text.
	* doc/sed.texi: Regenerate.
	* sed/execute.c (append_replacement, do_subst): Further
	simplification.

2011-05-27  Paolo Bonzini  <bonzini@gnu.org>

	* doc/sed-in.texi: Fix incorrect comment in the "Increment a
	number" example.  Reported by Wu Liang and Micah Cowan.
	* doc/sed.texi: Regenerate.

2011-03-11  Paolo Bonzini  <bonzini@gnu.org>

	* sed/compile.c (normalize_text): Clang analyzer cleanup.
	* sed/execute.c (append_replacement, do_subst): Same.
	* sed/utils.c (ck_getline): Same.

2010-11-13  Jari Aalto  <jari.aalto@cante.net>

	* doc/sed.x: Order commands alphabetically.